--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
             is to collect and analyze various information about traffic.
             PORTAL is a sub-group within ITS that has a more specific role. It stands for Portland, Oregon Regional Transportation
             Archive Listing. Their goal is to collect and archive various traffic data and statistics in the Portland Metro area.
+
+            Nasim:  A powerful feature of information is performance-based trend representation. 
+            Collecting, archiving -> diagnostics and statistical inference -> visualization and analysis of parameters -> performance trend -> optimization and evolutionary adaptation to rate of change.  
           </aside>
         </section>
 
