forgot to fix spell error

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <b>ITS & PORTAL</b><br />
               <ul align="left">
                 <li>Intelligent Transportation Systems</li>
-                <li>Various applications and technologies for colecting traffic information</li>
+                <li>Various applications and technologies for collecting traffic information</li>
                 <li>Portland, Oregon Regional Transportation Archive Listing</li>
                 <li>Archives the collected data in the Portland metro area</li>
                 <li>3 TB of data stored</li>
