--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </section>
 
         <section>
-          <h2>Turning Data Into Information (Why do this project?)</h2>
+          <h2>Data Into Information</h2>
           <ul>
             <li class="fragment">
               <b>There is data all over Portland</b><br />
