--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <ul>
                 <li class="fragment"><b>Front end</b>
                   <ul>
-                    <li>Nasim is UI/UX in the front end and plot the statistics graph</li>
+                    <li>Nasim: UI/UX of front-end, visual statistics plot, marker and map interaction, date and time picker, splash screen.</li>
                     <li>Loc uses data from the backend draw highway in the map and sets up CI</li>
                     <li>John</li>
                   </ul>
