--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
           <h3>Remember us?</h3>
           <p>By:<br/>Jesse Wagner, John Donahue, Josh Proehl, Loc Le, Nasim Sanati, Peter Gicking, Rob Werfelmann</p>
           <aside class="notes">
-          OWNER: Rob
+            OWNER: Rob
+            <p>Thanks for coming everyone! My name is Rob, I'm the
+            team lead for Team B. With me I have 6 developers: ---HAVE TEAM
+            INTRODUCE THEIR NAMES--- Tonight we'd like to proudly show you
+            the product we've all been hard at work on for the last 5
+            months: Routelandia.</p>
           </aside>
         </section>
 
@@ -144,16 +149,22 @@
 
         <section>
           <section>
+            <!-- TODO: Align the bullet points to the left instead of centered -->
             <h2>So how did we do it?</h2>
             <p>
-              (Assumptions constraints and references)
-
               <ul>
-                <li>Tech used</li>
+                <li><b>Tech used</b>
+                  <ul>
+                    <li>Java, PHP</li>
+                    <li>Postgres</li>
+                    <li>Restler</li>
+                  </ul>
+                </li>
               </ul>
             </p>
             <aside class="notes">
               OWNER: ROB
+              
             </aside>
           </section>
 
