Changed my slide based on Kat recommendation

--- a/index.html
+++ b/index.html
@@ -94,24 +94,26 @@
           </aside>
         </section>
 
-        <section>
+         <section>
           <h2>Data Into Information</h2>
           <ul>
             <li class="fragment">
-              <b>There is data all over Portland</b><br />
+              <b>Transportation data collection through Various applications and technologies</b><br />
               <ul align="left">
-                <li>Traffic detectors</li>
-                <li>Public transportation statistics</li>
+                <li>Traffic Detectors</li>
+                <li>Data Base Management System</li>
+                <li>3 TB of Traffic Data</li>
               </ul>
             </li>
             <li class="fragment">
-              <b>ITS & PORTAL</b><br />
+              <b>Intelligent Transportation Systems & PORTAL</b><br />
               <ul align="left">
-                <li>Intelligent Transportation Systems</li>
-                <li>Various applications and technologies for collecting traffic information</li>
-                <li>Portland, Oregon Regional Transportation Archive Listing</li>
-                <li>Archives the collected data in the Portland metro area</li>
-                <li>3 TB of data stored</li>
+              	<li>A powerful feature of information is performance-based trend representation.</li>
+                <li>Collection</li>
+                <li>Prediction and diagnostics by statistical inference</li>
+                <li>Visualization and analysis on parameters of interest</li>
+                <li>Performance trend</li>
+                <li>Optimization and evolutionary adaptation of daily performance</li>
               </ul>
             </li>
           </ul>
@@ -127,10 +129,9 @@
             Archive Listing. Their goal is to collect and archive various traffic data and statistics in the Portland Metro area.
 
             Nasim:  A powerful feature of information is performance-based trend representation. 
-            Collecting, archiving -> diagnostics and statistical inference -> visualization and analysis of parameters -> performance trend -> optimization and evolutionary adaptation to rate of change.  
+            Collecting -> diagnostics and statistical inference -> visualization and analysis of parameters -> performance trend -> optimization and evolutionary adaptation to rate of change.  
           </aside>
         </section>
-
 
         <section>
             <h2>What does it look like?</h2>
