--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <h2>Basic Overview of Routelandia</h2>
           <p>
           <ul>
-            <li>Android App Presents travel times on highways near Portland</li>
-            <li>historical data</li>
-            <li>Traffic is vaguely cyclical</li>
+            <li>Android app presents travel times on highways near Portland</li>
+            <li>Historical data</li>
+            <li>What do traffic cycles look like?</li>
             <li>Lets you know best time to hit highway</li>
           </ul>
           </p>
