--- a/index.html
+++ b/index.html
@@ -183,21 +183,24 @@
           <section>
           <section>
             <!-- TODO: Align the bullet points to the left instead of centered -->
-            <!-- TODO: readjust this slide -->
             <h2>So how did we do it?</h2>
             <p>
               <ul>
-                <li><b>Tech used</b>
+                <li>Java
                   <ul>
-                    <li>Java, PHP</li>
-                    <li>Postgres</li>
-                    <li>Restler</li>
-                  </ul>
-                  Tools used.
-                  <ul>
-                    <li>Android, PolyUtil, AChartEngine, php, behat, respect/relational, restler, etc...</li>
+                    <li>Android</li>
+                    <li>PolyUtil</li>
+                    <li>AChartEngine</li>
                   </ul>
                 </li>
+                <li>PHP
+                  <ul>
+                    <li>Restler</li>
+                    <li>respect/relational</li>
+                    <li>behat</li>
+                  </ul>
+                </li>
+                <li>Postgres</li>
               </ul>
             </p>
             <aside class="notes">
