Rewrote Who did what slide and slightly changed schedule and process slide

--- a/index.html
+++ b/index.html
@@ -222,29 +222,48 @@
                   <ul>
                     <li>Nasim: UI/UX of front-end, visual statistics plot, marker and map interaction, date and time picker, splash screen.</li>
                     <li>Loc uses data from the backend draw highway in the map and sets up CI</li>
-                    <li>John</li>
+                    <li>John did QA</li>
                   </ul>
                 </li>
-                <li class="fragment"><b>Backend</b>
+                <li class="fragment"><b>Back end</b>
                   <ul>
-                    <li>Josh is bearded wizard</li>
-                    <li>Peter is tall wizard</li>
-                    <li>Jesse is test wizard</li>
+                    <li>Josh is leader and bearded wizard</li>
+                    <li>Peter is tall wizard. Wrote lots of PHP</li>
+                    <li>Jesse is test wizard. Wrote lots of Tests</li>
                   </ul>
                 </li>
               </ul>
             </p>
 
             <aside class="notes">
-                OWNER: Rob
-                Originally, Nasim and Jesse were assigned to work on UI design. Once this was finished, they were split up into the front/back-end team.
+              OWNER: Rob
 
-                Each sub team had a team lead and they managed that team,
-                josh was back end team lead. The tasks removed from backends
-                original plan happened when we restructured the project to
-                make the backend the majority number cruncher. That required
-                changing how we talked to the database, how we futz’d with that
-                data and how we returned it.
+              <p>
+                So, who did what? I split the teams up into three separate
+                groups initially: Front-end, Back-end and UI design. UI
+                design was a temporary team composed of Nasim and Jesse. They
+                were responsible with coming up with the look of the
+                front-end app. Once that was finished, I re-assigned Nasim to
+                the front-end and Jesse to the back-end.
+              </p>
+              <p>NEXT FRAGMENT - PRESS DOWN!!!</p>
+              <p>
+                The front-end was composed of Loc, John and later
+                Nasim. Loc was put in charge of the sub-group and
+                responsible for putting down the groundwork for the
+                application. Nasim implemented several of the graphical
+                features such as the splash screen, date and time picker,
+                and statistics plot. John has helped out by testing and
+                doing QA work.
+              </p>
+              <p>NEXT FRAGMENT - PRESS DOWN!!!</p>
+              <p>
+                The back-end had Josh, Peter and then Jesse. Josh was the
+                lead, bearded Wizard (Their choice of title) and laid the
+                foundation for the server application as well as writing
+                the Postgres queries. Peter wrote the bulk of the PHP code
+                and Jesse wrote the Test code.
+              </p>
             </aside>
           </section>
 
@@ -258,7 +277,7 @@
                   </ul>
                 </li>
                 <li>Schedule changes</li>
-                <li>Handoff will involve deploying the PHP backend onto the Portal Server</li>
+                <li>Handoff process</li>
               </ul>
 
               <aside class="notes">
