--- a/index.html
+++ b/index.html
@@ -334,11 +334,21 @@
           <section>
               <h2>What we learned</h2>
               <p>
-                  I will bet this wil probably want to be two slides -PG
+                  
               <ul>
-                  <li>The good and bad of working with a team to produce something</li>
-                  <ul><li>Im assuming this was a first for most of us, should expand on it</li></ul>
-                  <li><b>Leaving slide unfinished so front end can also add</b> </li>
+                  <li>Backend Lessons:</li>
+                  <ul><li>We learned how to code in PHP</li></ul>
+                  <ul><li>We learned about model/view controller coding</li></ul>
+                  <ul><li>We learned how to set up a web server and postgres database</li></ul>
+                  <ul><li>We learned how to work with behavior driven development testing tools</li></ul>
+                  <li>Frontend Lessons:</li>
+                  <ul><li>We learned how to code android apps</li></ul>
+                  <ul><li>We learned how to cope with issues with Google API keys for the map functionality</li></ul>
+                  <ul><li>We learned how to setup a continuous integration service for testing the app</li></ul>
+                  <li>Group Lessons:</li>
+                  <ul><li>We worked on a group coding project for the first time</li></ul>
+                  <ul><li>We learned about rest-ful api construction</li></ul>
+                  <ul><li>We learned about how to use GitHub and merge requests and the importance of code reviews</li></ul>
               </ul>
               </p>
 
