changes to make the slide fit on my screen.

--- a/index.html
+++ b/index.html
@@ -339,12 +339,11 @@
                   <li>Backend Lessons:</li>
                   <ul><li>We learned how to code in PHP</li></ul>
                   <ul><li>We learned about model/view controller coding</li></ul>
-                  <ul><li>We learned how to set up a web server and postgres database</li></ul>
                   <ul><li>We learned how to work with behavior driven development testing tools</li></ul>
                   <li>Frontend Lessons:</li>
-                  <ul><li>We learned how to code android apps</li></ul>
-                  <ul><li>We learned how to cope with issues with Google API keys for the map functionality</li></ul>
-                  <ul><li>We learned how to setup a continuous integration service for testing the app</li></ul>
+                  <ul><li>We learned how to code an android app</li></ul>
+                  <ul><li>We learned about the importance of Google API keys</li></ul>
+                  <ul><li>We learned how to setup a continuous integration service</li></ul>
                   <li>Group Lessons:</li>
                   <ul><li>We worked on a group coding project for the first time</li></ul>
                   <ul><li>We learned about rest-ful api construction</li></ul>
