Some changes to Who did what slide

--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
                 <li class="fragment"><b>Back end</b>
                   <ul>
                     <li>Josh is leader and bearded wizard</li>
-                    <li>Peter is tall wizard. Wrote lots of PHP</li>
-                    <li>Jesse is test wizard. Wrote lots of Tests</li>
+                    <li>Peter is tall wizard. Wrote </li>
+                    <li>Jesse is test wizard. Wrote wrote the testing enviornment</li>
                   </ul>
                 </li>
               </ul>
@@ -266,16 +266,19 @@
                 responsible for putting down the groundwork for the
                 application. Nasim implemented several of the graphical
                 features such as the splash screen, date and time picker,
-                and statistics plot. John has helped out by testing and
-                doing QA work.
+                and statistics plot. John worked on testing and doing QA
+                work.
               </p>
               <p>NEXT FRAGMENT - PRESS DOWN!!!</p>
               <p>
                 The back-end had Josh, Peter and then Jesse. Josh was the
-                lead, bearded Wizard (Their choice of title) and laid the
+                lead, bearded Wizard (their choice of title) and laid the
                 foundation for the server application as well as writing
-                the Postgres queries. Peter wrote the bulk of the PHP code
-                and Jesse wrote the Test code.
+                the Postgres queries. Peter wrote lots of PHP code and took
+                the lead with working with the Front-end and decided how
+                the API structure would be implemented. When Jesse came on
+                board, because of his experience writing test code at work,
+                he took over the role of writing the entire test suite.
               </p>
             </aside>
           </section>
