Fixed a small mistake

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <li class="fragment"><b>Back end</b>
                   <ul>
                     <li>Josh is leader and bearded wizard</li>
-                    <li>Peter is tall wizard. Wrote </li>
+                    <li>Peter is tall wizard. Wrote PHP and coordinated API structure with front-end</li>
                     <li>Jesse is test wizard. Wrote wrote the testing enviornment</li>
                   </ul>
                 </li>
