--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
               </li>
               <li class="fragment">Error reporting
               <ul><li>Ask the user if our prediction was close</li>
-                  <li>Serve as a tool to help highlight bad data or holes in PORTAL database</li></ul>
+                  <li>Serve as a tool to help PORTAL highlight missing or incorrect data</li></ul>
               </li>
               </ul>
 
