Stubbing screenshot/demo

--- a/index.html
+++ b/index.html
@@ -323,54 +323,93 @@
 
         <section>
           <section>
-            <h2>Results</h2>
+            <h2>Demo</h2>
           </section>
 
           <section>
-            <h2>Limitations of the App</h2>
+            [ LAUNCH SCREENSHOT ]
+
+            <aside class="notes">
+              OWNER: Josh
+            </aside>
+          </section>
+
+          <section>
+            [ MAP SCREENSHOT ]
+
+            <aside class="notes">
+              OWNER: Josh
+            </aside>
+          </section>
+
+          <section>
+            [ MAP-WITH-POINTS SCREENSHOT ]
+
+            <aside class="notes">
+              OWNER: Josh
+            </aside>
+          </section>
+
+          <section>
+            [ TIME PICKER SCREENSHOT ]
+
+            <aside class="notes">
+              OWNER: Josh
+            </aside>
+          </section>
+
+          <section>
+            [ STATS CHART SCREENSHOT ]
+
+            <aside class="notes">
+              OWNER: Josh
+            </aside>
+          </section>
+
+          <section>
+            [ STATS TABLE SCREENSHOT ]
+
+            <aside class="notes">
+              OWNER: Josh
+            </aside>
+          </section>
+        </section>
+
+
+        <section>
+          <section>
+            <h2>About the Data</h2>
+            Statistics are hard!
+          </section>
+        </section>
+
+
+        <section>
+
+          <section>
+            <h2>Retrospective</h2>
+          </section>
+
+          <section>
+            <h2>Challenges</h2>
             <ul>
-              <li>limited only to highway data
+              <li>Limited only to highway data
                 <ul>
                   <li>This was a deliberate choice</li>
-                  <li>Highway data was the oldest and most stable of the data</li>
-                  <li>We rely on hisortical data so it made since to choose the data with the largest archive</li>
                 </ul>
               </li>
-              <li>Currently cannot generate statistics across multiple highways</li>
-              <li>We have a potential way for a future team to implement this</li>
               <li>Clicking near the line?</li>
+              <li>Currently cannot generate statistics across multiple highways</li>
             </ul>
 
             <aside class="notes">
               OWNER: Josh
-              The over view answers the "what can your product do" questions, next we answer
-              "what cant it do, what did we plan for that didn't happen"
+              We discovered we would not be able to associate attributes to drawn
+              lines on google maps which caused us to have to restructure our project.
+              We responded by having one particularly long meeting figuring out how to
+              attack the project from this new angle.
+
             </aside>
-          </section>
-
-
-          <section>
-              <h2>Pitfalls and roadblocks</h2>
-              <p>
-              <ul>
-                  <li>Significant design change halfway through project</li>
-                  <li>Data from Portal had quirks</li>
-                  <li>Portal was restructuring their database</li>
-              </ul>
-              </p>
-
-              <aside class="notes">
-                  OWNER: Josh
-                  We discovered we would not be able to associate attributes to drawn
-                  lines on google maps which caused us to have to restructure our project.
-                  We responded by having one particularly long meeting figuring out how to
-                  attack the project from this new angle.
-
-                  We also had some issues with the PORTAL database, having null/empty spots.
-                  Mitigated this by ignoring the bad data as it came in. Also the
-                  database was going through a restructure as we were working on it
-                  which caused us to have to get clever with the stats query.
-              </aside>
           </section>
 
           <section>
@@ -395,12 +434,6 @@
               <aside class="notes">
                 OWNER: Jesse
               </aside>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>Retrospective</h2>
           </section>
 
           <section>
