Changed "so how did..." to "tools used"
Renamed the slide "So how did we do it?" to "Tools Used" and moved it to
an independent slide.

--- a/index.html
+++ b/index.html
@@ -179,11 +179,9 @@
             </aside>
         </section>
         </section>
-
-          <section>
-          <section>
+<section>
             <!-- TODO: Align the bullet points to the left instead of centered -->
-            <h2>So how did we do it?</h2>
+            <h2>Tools Used</h2>
             <p>
               <ul>
                 <li>Java
@@ -225,6 +223,8 @@
               and it all was tested using behat.
             </aside>
           </section>
+          <section>
+          
 
           <section>
             <h2>Who did what?</h2>
