--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </ul>
             </li>
             <li class="fragment">
-              <b>Intelligent Transportation Systems & PORTAL</b><br />
+              <b>Intelligent Transportation Systems & Portal</b><br />
               <ul align="left">
               	<li>A powerful feature of information is performance-based trend representation.</li>
                 <li>Collection</li>
@@ -129,7 +129,7 @@
 
             ITS is an organization that has a place here at PSU. It stands for "Intelligent Transportation Systems". ITS' role here
             is to collect and analyze various information about traffic.
-            PORTAL is a sub-group within ITS that has a more specific role. It stands for Portland, Oregon Regional Transportation
+            Portal is a sub-group within ITS that has a more specific role. It stands for Portland, Oregon Regional Transportation
             Archive Listing. Their goal is to collect and archive various traffic data and statistics in the Portland Metro area.
 
             Nasim:  A powerful feature of information is performance-based trend representation. 
@@ -151,7 +151,7 @@
               <ul>
                 <li class="fragment">PHP based REST API</li>
                 <li class="fragment">Restler framework chosen</li>
-                <li class="fragment">Server deployed through PORTAL</li>
+                <li class="fragment">Server deployed through Portal</li>
               </ul>
             </li>
             <li class="fragment">Client Application
@@ -505,11 +505,11 @@
               <li class="fragment">Multi-freeway routing
               <ul><li>Originally planned to be in product
               <li>Became stretch goal after major design change</li>
-              <li>Would require pg_routing and design change to PORTAL database</li></ul>
+              <li>Would require pg_routing and design change to Portal database</li></ul>
               </li>
               <li class="fragment">Error reporting
               <ul><li>Ask the user if our prediction was close</li>
-                  <li>Serve as a tool to help PORTAL highlight missing or incorrect data</li></ul>
+                  <li>Serve as a tool to help Portal highlight missing or incorrect data</li></ul>
               </li>
               </ul>
 
@@ -535,12 +535,12 @@
                     because they relied on PHP doing the number crunching  instead of keeping all that
                     heavy computation inside the database.  After some research we discovered pg_routing
                     would best suit our needs but it would require some non-trivial design changes in the
-                    PORTAL database which would take time than we had to implement. </p>
+                    Portal database which would take time than we had to implement. </p>
 
                 NEXT
                 <br />
-                <p>Finally we wanted to add some kind of error reporting as a tool for us and PORTAL
-                    to highlight missing or incorrect data in the PORTAL database. This would let us know
+                <p>Finally we wanted to add some kind of error reporting as a tool for us and Portal
+                    to highlight missing or incorrect data in the Portal database. This would let us know
                     how far off the mark our predictions were for travel time. </p>
 
 
