--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
               OWNER: Peter
                 What we would’ve done differently
 
-                <p>First off in the backend, we would’ve wanted to choose a different language from PHP because PHP
-                    comes with a lot of quirks. Additionally the frameworks for PHP we were using didn’t have much
+                <p>First off in the backend, we would’ve wanted to choose different frameowrks 
+                    The frameworks for PHP we were using didn’t have much
                     support or documentation which made debugging difficult. The lack of search results outside of
                     their main website is something that should’ve sent up red flags in the start during our research.
                     Respect relational for example, required us to delve into their source code to figure out what was
@@ -475,7 +475,7 @@
                     before we started writing code. For most of the project the backend was testing all the api routes
                     by hand which caused some niche api routes to break when someone forgot to test every single
                     one with every commit. In a perfect world code reviews would catch these but some still managed
-                    to split through the cracks. It also made it hard to debug communication issues between front end
+                    to slip through the cracks. It also made it hard to debug communication issues between front end
                     and back end. When frontend would try to call an api route and it would break, it was always initially
                     unclear if it was actually frontend’s or backend’s code at fault. Usually it was some combination
                     of both.</p>
@@ -534,7 +534,7 @@
                     server. We discussed a lot of kind’ve hacky ways to go about it but would want to avoid
                     because they relied on PHP doing the number crunching  instead of keeping all that
                     heavy computation inside the database.  After some research we discovered pg_routing
-                    would best suit our needs but it would require some non-trivial design changes in the
+                    would best tool to suit our needs but it would require some non-trivial design changes in the
                     PORTAL database which would take time than we had to implement. </p>
 
                 NEXT
